# ChangeLog for sci-libs/fftw
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.74 2008/11/24 11:02:05 bicatali Exp $

*fftw-3.2 (21 Nov 2008)

  21 Nov 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/fftw-3.2-as-needed.patch, +files/fftw-3.2-cppflags.patch,
  +files/fftw-3.2-openmp.patch, -fftw-3.1.2-r1.ebuild, +fftw-3.2.ebuild:
  Version bump. Thanks to Adam Piątyszek, closing bug #247561

*fftw-3.1.3 (20 Oct 2008)

  20 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> +fftw-3.1.3.ebuild:
  Version bump

  17 Oct 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  openmp USE-flag is global now

  28 Aug 2008; Sébastien Fabbro <bicatali@gentoo.org> fftw-2.1.5-r5.ebuild,
  fftw-3.1.2-r1.ebuild:
  Fixed openmp tests for gcc < 4.2

  07 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  10 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/fftw-2.1.5-configure.in.patch, files/fftw-3.1.2-configure.ac.patch,
  files/fftw-3.1.2-openmp.patch, fftw-2.1.5-r5.ebuild, fftw-3.1.2-r1.ebuild:
  Added openmp checks and revert to posix threads if openmp not supported by
  compiler. Close bug #230982.

  04 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/fftw-2.1.5-no-test.patch:
  Avoid compiling mpi and threaded tests when not asked (close bug #230705)

*fftw-3.1.2-r1 (02 Jul 2008)
*fftw-2.1.5-r5 (02 Jul 2008)

  02 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/fftw-2.1.5-configure.in.patch, +files/fftw-3.1.2-as-needed.patch,
  files/fftw-3.1.2-configure.ac.patch, +files/fftw-3.1.2-openmp.patch,
  +fftw-2.1.5-r5.ebuild, +fftw-3.1.2-r1.ebuild:
  Added openmp support for both fftw-2 and fftw-3. Added as-needed fixes for
  fftw-3, needed for threads support. Added a doc use flag for fftw-3.

  23 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>