@@ -18,13 +18,13 @@ EBUILD fftw-2.1.5-r4.ebuild 3435 RMD160 6dec3455cbb6e4804d1d0899a9816a7c771aef03
 EBUILD fftw-2.1.5-r5.ebuild 3847 RMD160 ade95322bf17aa8c911587b364424622ed69356f SHA1 70a0051b49e07e02bf2b124df4cc8d0451bf9211 SHA256 7706bc77b28e03847e5d8cf04f3114c070ac3a8d79c54c4ea6797076ef142f2f
 EBUILD fftw-3.1.2.ebuild 3028 RMD160 ccae2a7aa9987a6dadac0de1b6c22d70f267c14d SHA1 a099a89a2fe1164b78b05b2a41d29b4a8c4a776a SHA256 96b29aa7df715b9765596d0e9c69a69013232e412d255afbc71e58feb3160804
 EBUILD fftw-3.1.3.ebuild 3956 RMD160 1a26e82f159bbd9354e429edb50257bec385d514 SHA1 68d221a2ce8638bac8016bad7ae09a91ef0aa330 SHA256 c982e9c98cc5b4c1dc4109b5b36b0a4b4cf2e3674a3f13bc4161d159364a65fb
-EBUILD fftw-3.2.ebuild 3932 RMD160 29b35808655e34357e080ea54cc473311fcf16ab SHA1 86bfc94dfa2f06820081d39e612cea8b274adce0 SHA256 661bf0e287ffbcb0748203359d4a84aaca7c48b77aca3cef248db1a5f95be610
-MISC ChangeLog 16176 RMD160 3550c59d5ad99acf3e65214cfdba3478ca6bc4f4 SHA1 630fbe1752c83b6ec249c334c7f058d5c490b4f8 SHA256 b4518f64719f65f4d997e0805478e211dfe0151d9d069a733d280702faad04cf
+EBUILD fftw-3.2.ebuild 3919 RMD160 06eec7f1692940765b79696c4b41656708db8102 SHA1 9d4f696c9ca2aaa5d142e348e132b2a8e9939b66 SHA256 c35a94d183821cc41d34e661979388513fa02a6932a6beca75cba7904ca256bf
+MISC ChangeLog 16358 RMD160 337bca10a77f9fddbb3fa7b5457b65b35adc8f71 SHA1 443519709a70f62a2fc111b379a664f581330a77 SHA256 52b93f73603ca499c6387bc6c556d56547a908d57c371095b940d97ff959d2b1
 MISC metadata.xml 770 RMD160 ca19408a763b8f3db20849456d67c3027cfdba5e SHA1 8c6d41e762d4cc86eaaeee10a2fc9c4743e0e828 SHA256 129a4af8bed71473f17cf323cb11763e09cf9b63eaa764643a1412c649a8c0bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkqibcACgkQ1ycZbhPLE2DeKQCgot83nu51Uyg3nkdKCMN6vhKK
-hHoAn1vWclaeSn1WygGv75jipcy4Kemy
-=B7DA
+iEYEARECAAYFAkkueOkACgkQ1ycZbhPLE2DFyACdGp7brYdfya5kTLsf7CXyhasv
+ARQAoLPqgKLwad7Tskxw2v4qLTQyaCy7
+=RzBM
 -----END PGP SIGNATURE-----
